@@ -1,3 +1,4 @@
-/boot/efi/EFI/ubuntu/shim*.efi /usr/lib/shim
-/boot/efi/EFI/ubuntu/mm*.efi.signed /usr/lib/shim
-/boot/efi/EFI/ubuntu/fb*.efi.signed /usr/lib/shim
+/boot/efi/EFI/*/shim*.efi /usr/lib/shim
+/boot/efi/EFI/*/mm*.efi /usr/lib/shim
+/boot/efi/EFI/*/fb*.efi /usr/lib/shim
+/boot/efi/EFI/*/BOOT*.CSV /usr/lib/shim
