@@ -26,6 +26,9 @@ shim (12+1503074702.5202f80-0ubuntu1~test3) artful; urgency=medium
     target.
   * debian/patches/buildid_write_return.patch: workaround our strict compile
     rules failing the build: make sure write calls check the return value.
+  * debian/rules, debian/shim.install: make sure the 'make install' step does
+    what it's meant to do by upstream: we can easily make use of the end result
+    to have the files we need.
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 29 Aug 2017 22:45:30 -0400
 
